<resources>
    <string name="app_name">Toy Story App</string>
    <string name="advanced_mode">Modo Avanzado</string>
    <string name="start">EMPEZAR</string>
    <string name="stop">PARAR</string>
    <string name="restart">REINICIAR</string>
    <string name="modo_facil">Modo Facil</string>
    <string name="splash_image" translatable="false">Splash Image</string>
    <string name="turno_cpu">Turno: CPU</string>
    <string name="turno_jugador">Turno: Jugador</string>
    <string name="casilla_ya_seleccionada">Casilla ya seleccionada</string>
    <string name="el_juego_ha_comenzado">El juego ha comenzado...</string>
    <string name="el_juego_ha_terminado">El juego ha terminado</string>
    <string name="est_s_seguro_de_que_quieres_reinciar_el_juego">¿Estás seguro de que quieres reinciar el juego?</string>
    <string name="gana_el_jugador">¡Gana el Jugador!</string>
    <string name="empate">Empate</string>
    <string name="gana_la_cpu">¡Gana la CPU!</string>
</resources>