<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="#F9DD01"
>
    <ImageView
            android:layout_width="197dp"
            android:layout_height="170dp" android:id="@+id/imageLogo" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp" app:srcCompat="@mipmap/toystory"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"/>


    <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            app:columnCount="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rowCount="3">

        <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                android:background="@drawable/border_black"
                android:padding="5dp"/>

        <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                android:background="@drawable/border_black"
                android:padding="5dp"/>

        <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                android:background="@drawable/border_black"
                android:padding="5dp"/>

        <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                android:background="@drawable/border_black"
                android:padding="5dp"/>

        <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                android:background="@drawable/border_black"
                android:padding="5dp"/>

        <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                android:background="@drawable/border_black"
                android:padding="5dp"/>

        <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                android:background="@drawable/border_black"
                android:padding="5dp"/>

        <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                android:background="@drawable/border_black"
                android:padding="5dp"/>

        <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                android:background="@drawable/border_black"
                android:padding="5dp"/>
    </androidx.gridlayout.widget.GridLayout>

    <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginTop="40dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"

            app:layout_constraintHorizontal_bias="1.0"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider">

        <RadioGroup
                android:id="@+id/difficultyRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <RadioButton
                    android:id="@+id/easyRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modo_facil"
                    android:textStyle="bold"
                    android:textColor="@color/black"
            />


            <RadioButton
                    android:id="@+id/advancedRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_mode"
                    android:textStyle="bold"
                    android:textColor="@color/black"
            />
        </RadioGroup>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

            <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/start"
                    android:textOn="@string/stop"/>

            <ImageView
                    android:id="@+id/turnImageView"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"/>

            <TextView
                    android:id="@+id/turnTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/black"/>

        </LinearLayout>

        <Button
                android:id="@+id/restartBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/restart"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>